# Text2Sql

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/api/: main.py
app/executors/: sqlite_exec.py
app/graph/: nodes.py  pipeline.py
app/guards/: sql_guard.py
app/models/: local_llm.py  sql_agent.py
app/ui/: streamlit_app.py
app/utils/: logger.py
setup/: init_db.py
tests/integration/: test_pipeline.py
tests/unit/: test_guard.py
