[project]
name = "local-orchestrator"
version = "0.1.0"
description = "Offline-first Local Orchestrator for NL → SQL using FastAPI, Streamlit, SQLite, and uv"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.9"

dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "sqlalchemy==2.0.36",
    "streamlit==1.38.0",
    "requests==2.32.3",
    "pytest==8.3.2",
    "coverage==7.6.1",
]

[tool.uv]
# optional: define default Python version for the venv
# python = "3.11"  # This field is not valid in [tool.uv] section

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
